[gd_scene format=3 uid="uid://crgp7qewk0ixj"]

[ext_resource type="Script" uid="uid://crtkt82diy85q" path="res://Scripts/UI/MainMenu/MainMenu.gd" id="1_les83"]

[node name="MainMenu" type="Control" unique_id=1659082315]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_les83")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=460807780]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_top = -24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=1125998364]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer" unique_id=202653806]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer" unique_id=419017794]
layout_mode = 2
theme_override_constants/separation = 16

[node name="EmptyButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" unique_id=994396940]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_vertical = 3
disabled = true

[node name="EmptyButton2" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" unique_id=842677768]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_vertical = 3
disabled = true

[node name="PlayButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" unique_id=689281023]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Play"

[node name="AboutButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1681429625]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "About
"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" unique_id=999175053]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="SidePanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/HBoxContainer" unique_id=1993145321]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
